--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  carousel_slider: ^4.0.0
   flutter:
     sdk: flutter
   get: ^4.3.8
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
