--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^9.2.0
   get: ^4.3.8
   google_fonts: ^2.1.0
 
