--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 
 dependencies:
   carousel_slider: ^4.0.0
+  cloudinary_public: ^0.11.0
+  dio: ^4.0.1
   flutter:
     sdk: flutter
   font_awesome_flutter: ^9.2.0
   get: ^4.3.8
   google_fonts: ^2.1.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
