--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: ^4.3.8
   google_fonts: ^2.1.0
   image_picker: ^0.8.4+4
+  lottie: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -27,4 +28,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
 
